fix(cropping): Checkered background on cropper image

--- a/resources/style.scss
+++ b/resources/style.scss
@@ -113,6 +113,9 @@
         text-transform: capitalize;
     }
 }
+.cropper .jcrop-active>img {
+	@include checkered();
+}
 
 
 @import 'spinner';
